# qiskit-ibm-transpiler

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ai-clifford-synthesis-demo.ipynb  ai-large-circuit-speed-test.ipynb  ai-linear-function-synthesis-demo.ipynb  ai-permutation-synthesis-demo.ipynb  ai-transpiler-demo.ipynb  ai-transpiling-tutorial.ipynb  documentation-examples.ipynb  local-mode-example.ipynb  local-mode-routing.ipynb  pyproject.toml  pytest.ini  requirements-dev-3.9.txt  requirements-dev.txt  ruff.toml  setup.py
.gemini/: settings.json
.github/: CODEOWNERS
.github/.workflows/: ci.yml  reusable_checkout.yml
.github/actions/build-docs/: action.yml
.github/workflows/: cd.yml  ci.yml  reusable_checkout.yml  upload-docs.yml
docs/: conf.py  index.rst
docs/_templates/autosummary/: class.rst
docs/apidocs/: ai.rst  index.rst  transpiler_service.rst  utils.rst
examples/: ai-large-circuit-speed-test.ipynb  ai-linear-function-synthesis-demo.ipynb  ai-permutation-synthesis-demo.ipynb  ai-transpiler-demo.ipynb
qiskit_ibm_transpiler/: __init__.py  ai_passmanager.py  hf_models_client.py  model_bootstrap.py  model_repository.py  transpiler_service.py  types.py  utils.py  version.py
qiskit_ibm_transpiler/ai/: __init__.py  ai_pass_manager.py  collection.py  routing.py  synthesis.py
qiskit_ibm_transpiler/data/: model_sources.json  model_sources.yaml
qiskit_ibm_transpiler/local_routing/: __init__.py
qiskit_ibm_transpiler/wrappers/: __init__.py  ai_api_routing.py  ai_api_synthesis.py  ai_local_linear_function_synthesis.py  ai_local_routing.py  ai_local_synthesis.py  ai_routing.py  ai_synthesis.py  base.py  function_transpile.py  transpile.py
qiskit_transpiler_service/: __init__.py  transpiler_service.py  utils.py
qiskit_transpiler_service/ai/: __init__.py  collection.py  routing.py  synthesis.py
qiskit_transpiler_service/wrappers/: __init__.py  ai_routing.py  ai_synthesis.py  base.py  transpile.py
release-notes/: 0.1.2.rst  0.1.3.rst  0.10.0.rst  0.10.1.rst  0.10.2.rst  0.10.3.rst  0.11.0.rst  0.11.1.rst  0.12.0.rst  0.13.0.rst  0.13.1.rst  0.14.0.rst  0.14.1.rst  0.14.2.rst  0.14.3.rst  0.14.4.rst  0.14.5.rst  0.15.0.rst  0.15.1.rst  0.15.2.rst  0.16.0.rst  0.16.1.rst  0.17.0.rst  0.18.0.rst  0.2.0.rst  0.2.1.rst  0.3.0.rst  0.4.0.rst  0.4.1.rst  0.4.10.rst  0.4.2.rst  0.4.3.rst  0.4.4.rst  0.4.5.rst  0.4.6.rst  0.4.7.rst  0.4.8.rst  0.4.9.rst  0.5.0.rst  0.5.1.rst  (+24 more)
release-notes/unreleased/: .gitkeep  104.feat.rst  105.fix.rst  111.feat.rst  112.feat.rst  130.bug.rst  136.bug.rst  141.bug.rst  144.upgrade.rst  147.deprecation.rst  149.other.rst  158.upgrade.rst  165.deprecation.rst  166.refactor.rst  168.upgrade.rst  18.feat.rst  184.feat.rst  203.upgrade.rst  207.bug.rst  209.feat.rst  210.upgrade.rst  213.bug.rst  225.other.rst  226.bug.rst  227.upgrade.rst  228.feat.rst  231.upgrade.rst  233.feat.rst  235.feat.rst  240.upgrade.rst  243.upgrade.rst  244.feat.rst  67.feat.rst  70.feat.rst  74.bug.rst  81.chore.rst  83.feat.srt  84.other.rst  85.feat.srt  97.feat.rst
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/routing/: config.rs  dag.rs  env.rs  graph.rs  metrics.rs  mod.rs  model.rs  model_data.rs  ops.rs  routing.rs
scripts/: concat_release_notes.py  docs  docs-clean
tests/: __init__.py  conftest.py  parametrize_functions.py  test_ai_passmanager.py  test_ai_routing_pass.py  test_ai_synthesis_pass.py  test_collection_pass.py  test_hf_models_client.py  test_local_routing.py  test_model_bootstrap.py  test_model_repository.py  test_permutation_collection.py  test_token_from_system.py  test_transpiler_service.py  test_transpiler_service_deprecated_package.py  test_utils.py  utils.py
tests/ai/: conftest.py  test_ai_clifford_synthesis.py  test_ai_linear_function_synthesis.py  test_ai_local_clifford_synthesis.py  test_ai_local_linear_function_synthesis.py  test_ai_local_permutation_synthesis.py  test_ai_local_routing.py  test_ai_local_synthesis_linear_functions.py  test_ai_permutation_synthesis.py  test_ai_routing.py  test_ai_routing_pass.py  test_ai_synthesis_pass.py  test_clifford_ai.py  test_clifford_collection.py  test_linear_function_ai.py  test_linear_function_collection.py  test_pauli_network_ai.py  test_pauli_network_collection.py  test_permutation_ai.py  test_permutation_collection.py  test_routing_ai.py
tests/test_files/: cc_n64.qasm  eagle_cmap.txt  pauli_circuit.qasm
tools/: verify_images.py
(+9 files in other folders)
